added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link rel="stylesheet" href="/Users/danielferreiradaloia/bootcamp/prework-study-guide/assets/style.css">
+
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -34,7 +37,8 @@
         <h2>CSS</h2>
 
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>I executed the command 'touch style.css' to  to create a new, empty file called 'style.css'.  </li>
+          <li>I used "link rel="stylesheet" href="./assets/style.css" to link the external css file to my html page</li>
         </ul>
 
       </section>
